# bureau

./: ;:w  Cargo.toml  README.md
src/: main.rs  routing.rs  state.rs
src/espx_env/: mod.rs
src/espx_env/ui_listeners/: edits.rs  handler.rs  listener.rs  mod.rs  updates.rs
src/logic/: database.rs  mod.rs  patches.rs  routing.rs
src/logic/views/: mod.rs  models.rs  partials.rs  templates.rs
src/logic/websocket/: mod.rs  models.rs
src/view_logic/: mod.rs  patches.rs
src/view_logic/views/: models.rs  partials.rs  templates.rs
src/websocket/: mod.rs  models.rs
static/: styles.css
templates/: add_message_form.html  agent_view.html  chat_history.html  env_view.html  index.html  layout.html
templates/websocket/: assistant_message.html  user_message.html
