[package]
name = "bureau"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features=["form", "ws"]}
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
futures = "0.3.29"
axum-htmx = "0.4.0"
axum-macros = "0.3.8"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.17"
tracing-bunyan-formatter = "0.3.9"
once_cell = "1.18.0"
askama = "0.12.1"
tower-http = { version = "0.4.4", features = ['fs'] }
espionox = {path = "../Espionox"} 
dotenv = "0.15.0"
markdown = "0.3.0"

